--- a/.github/workflows/dockerlogin.yml
+++ b/.github/workflows/dockerlogin.yml
@@ -21,8 +21,7 @@ jobs:
     steps: 
       - name: Configure Docker to allow HTTP
         run: |
-              docker info
-			  mkdir -p ~/.docker
+              mkdir -p ~/.docker && docker info
               echo '{"insecure-registries": ["a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443"]}' > ~/.docker/config.json
 
       - name: Test registry connectivity  
