--- a/.github/workflows/dockerlogin.yml
+++ b/.github/workflows/dockerlogin.yml
@@ -29,9 +29,9 @@ jobs:
               sleep 10
 
 
-      - name: Test registry connectivity  
+      - name: Docker info
         run: |
-              curl http://a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443/pulp/api/v3/
+              docker info
 
       - name: Docker Login        
         run: |
