--- a/.github/workflows/dockerlogin.yml
+++ b/.github/workflows/dockerlogin.yml
@@ -24,12 +24,8 @@ jobs:
               mkdir -p ~/.docker 
               echo '{"insecure-registries": ["a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443"]}' > ~/.docker/config.json
               echo '{"insecure-registries": ["a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443"]}' | sudo tee /etc/docker/daemon.json > /dev/null
-              cat ~/.docker/config.json
-              cat /etc/docker/daemon.json || echo "Daemon config not accessible"
-              sleep 10
               sudo systemctl restart docker
-
-
+              sleep 10
 
       - name: Docker info
         run: |
@@ -37,7 +33,7 @@ jobs:
 
       - name: Docker Login        
         run: |
-              echo "v4QkSIh6bXbCqzFf8SSX7tTKZg25rU65" | docker login a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443 -u "admin" --password-stdin --tls-verify=false
+              echo "v4QkSIh6bXbCqzFf8SSX7tTKZg25rU65" | docker login a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443 -u "admin" --password-stdin
 
       - name: Pull the Image from repo and push it to pulp
         run: |              
