--- a/.github/workflows/dockerlogin.yml
+++ b/.github/workflows/dockerlogin.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Configure Docker to allow HTTP
         run: |
               mkdir -p ~/.docker 
-              echo '{"insecure-registries": ["a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443"]}' > ~/.docker/config.json
-              echo '{"insecure-registries": ["a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443"]}' | sudo tee /etc/docker/daemon.json > /dev/null
+              echo '{"insecure-registries": ["ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443:8443"]}' > ~/.docker/config.json
+              echo '{"insecure-registries": ["ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443:8443"]}' | sudo tee /etc/docker/daemon.json > /dev/null
               sudo systemctl restart docker
               sleep 10
 
@@ -33,19 +33,18 @@ jobs:
 
       - name: Docker Login        
         run: |
-              echo "v4QkSIh6bXbCqzFf8SSX7tTKZg25rU65" | docker login a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443 -u "admin" --password-stdin
+              echo "v4QkSIh6bXbCqzFf8SSX7tTKZg25rU65" | docker login ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443:8443 -u "admin" --password-stdin
 
       - name: Pull the Image from repo and push it to pulp
         run: |              
-              docker  pull busybox
-              docker tag busybox a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443/busybox
-              docker push a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443/busybox
+              docker pull busybox
+              docker tag busybox ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443:8443/busybox
+              docker push ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443:8443/busybox
               
       - name: Pull the Image from Pulp
         run: |
-              docker pull a64be425b0f424134b057687c4653ba2-2081084264.us-west-2.elb.amazonaws.com:8443/busybox
+              docker pull ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443:8443/busybox
 
       - name: List Docker Images
         run: |
-              docker image ls
-
+              docker images
