--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,51 +1,65 @@
-name: Sync and pull
+name: Pulp Repository Setup for GitHub Packages
 
 on:
   workflow_dispatch:
-  
+
 permissions:
   id-token: write
   contents: read
 
-env:
-  REGISTRY: ghcr.io
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  GITHUB_BRANCH: main
-  CLUSTER_INPUT: ${{ github.event.inputs.cluster }}
-  environment: ${{ github.event.inputs.AWS_Environment }}
-
 jobs:
-  create_pulp_repo:
+  setup_pulp_repo:
     runs-on: ubuntu-latest
 
-    steps: 
-      - name: Configure Docker to allow HTTP
-        run: |
-              mkdir -p ~/.docker 
-              echo '{"insecure-registries": ["ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443"]}' > ~/.docker/config.json
-              echo '{"insecure-registries": ["ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443"]}' | sudo tee /etc/docker/daemon.json > /dev/null
-              sudo systemctl restart docker
-              sleep 10
+    steps:
+      # Step 1: Log in to GitHub Container Registry (ghcr.io)
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker info
+      # Step 2: Retrieve Pulp Repository HREF
+      - name: Retrieve Repository HREF
+        id: get_repo_href
         run: |
-              docker info
+          response=$(curl -u "${{ secrets.PULP_USER }}:${{ secrets.PULP_PASSWORD }}" \
+                  -X GET http://pulp-dc02.intacct.com:80/pulp/api/v3/repositories/container/container/)
+          REPO_HREF=$(echo "$response" | jq -r '.results[] | select(.name=="selenium-kiran") | .pulp_href')
+          echo "Repository HREF: $REPO_HREF"
+          echo "REPO_HREF=$REPO_HREF" >> $GITHUB_ENV
 
-      - name: Docker Login        
+      # Step 3: Retrieve Pulp Remote HREF
+      - name: Retrieve Remote HREF
+        id: get_remote_href
         run: |
-              echo "n03Cez6knQwdsUOewhjEGjXidn4PCDH3" | docker login ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443 -u "admin" --password-stdin
+          response=$(curl -u "${{ secrets.PULP_USER }}:${{ secrets.PULP_PASSWORD }}" \
+                  -X GET http://pulp-dc02.intacct.com:80/pulp/api/v3/remotes/container/container/)
+          REMOTE_HREF=$(echo "$response" | jq -r '.results[] | select(.name=="selenium-kiran") | .pulp_href')
+          echo "Remote HREF: $REMOTE_HREF"
+          echo "REMOTE_HREF=$REMOTE_HREF" >> $GITHUB_ENV
 
-      - name: Pull the Image from repo and push it to pulp
-        run: |              
-              docker pull busybox
-              docker tag busybox ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443/busybox
-              docker push ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443/busybox
-              
-      - name: Pull the Image from Pulp
+      # Step 4: Sync Remote with Repository
+      - name: Sync Remote to Repository
         run: |
-              docker pull ab3c9592b29864683b113dbaa059b3ff-1413369471.us-west-2.elb.amazonaws.com:8443/busybox
+          curl -u "${{ secrets.PULP_USER }}:${{ secrets.PULP_PASSWORD }}" \
+          -X POST "http://pulp-dc02.intacct.com:80${{ env.REPO_HREF }}sync/" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "remote": "'"${{ env.REMOTE_HREF }}"'"
+          }'
 
-      - name: List Docker Images
+      # Step 5: Log in to Pulp Registry (HTTP)
+      - name: Log in to Pulp Registry
         run: |
-              docker images
+          echo "${{ secrets.PULP_PASSWORD }}" | docker login http://pulp-dc02.intacct.com \
+          -u "${{ secrets.PULP_USER }}" --password-stdin
 
+      # Step 6: Pull Image from Pulp
+      - name: Pull Docker Image from Pulp
+        run: docker pull http://pulp-dc02.intacct.com/selenium-kiran/selenium4:v1
+
+      # Step 7: List Docker Images
+      - name: Verify Pulled Images
+        run: docker image ls
