--- a/standard-sc-aws.yaml
+++ b/standard-sc-aws.yaml
@@ -1,10 +1,11 @@
+allowVolumeExpansion: true
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: standard
-provisioner: kubernetes.io/aws-ebs
 parameters:
   fsType: ext4
   type: gp2
+provisioner: kubernetes.io/aws-ebs
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
