--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -16,21 +16,31 @@ jobs:
 
       - name: Fetch Images from GitHub Packages
         env:
-          GITHUB_REPO: "mishragulshan999"
+          GITHUB_USER: "mishragulshan999"
           TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
           echo "Fetching images from GitHub..."
-          
-          # Fetch container images correctly (FIXED)
+
+          # Fetch container images (Auto-detect User/Org)
           IMAGES=$(curl -s -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $TOKEN" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/orgs/$GITHUB_REPO/packages?package_type=container" \
-            | jq -r '.[] | select(.name != null) | {image: .name, url: .html_url}')
+            "https://api.github.com/users/$GITHUB_USER/packages?package_type=container" \
+            | jq -r '.[] | {image: .name, url: .html_url}')
 
-          if [ -z "$IMAGES" ]; then
-            echo "No images found in GitHub Packages!"
+          if [ -z "$IMAGES" ] || [ "$IMAGES" == "null" ]; then
+            echo "Trying organization API instead..."
+            IMAGES=$(curl -s -L \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer $TOKEN" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              "https://api.github.com/orgs/$GITHUB_USER/packages?package_type=container" \
+              | jq -r '.[] | {image: .name, url: .html_url}')
+          fi
+
+          if [ -z "$IMAGES" ] || [ "$IMAGES" == "null" ]; then
+            echo "❌ ERROR: No images found! Check GitHub username or API permissions."
             exit 1
           fi
 
@@ -46,7 +56,7 @@ jobs:
 
       - name: Compare & Cleanup Old Images
         env:
-          GITHUB_REPO: "mishragulshan999"
+          GITHUB_USER: "mishragulshan999"
           TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
           OUTPUT="["
@@ -59,7 +69,7 @@ jobs:
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
-                "https://api.github.com/orgs/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
+                "https://api.github.com/users/$GITHUB_USER/packages/container/$IMAGE_NAME/versions" \
                 | jq -r '.[].metadata.container.tags[]' | sort -V)
 
               if [ -z "$GITHUB_TAGS" ]; then
@@ -103,7 +113,7 @@ jobs:
                           -H "Accept: application/vnd.github+json" \
                           -H "Authorization: Bearer $TOKEN" \
                           -H "X-GitHub-Api-Version: 2022-11-28" \
-                          "https://api.github.com/orgs/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
+                          "https://api.github.com/users/$GITHUB_USER/packages/container/$IMAGE_NAME/versions" \
                           | jq -r ".[] | select(.metadata.container.tags[] == \"$tag\") | .id")
 
                       if [ -n "$VERSION_ID" ]; then
@@ -111,7 +121,7 @@ jobs:
                               -H "Accept: application/vnd.github+json" \
                               -H "Authorization: Bearer $TOKEN" \
                               -H "X-GitHub-Api-Version: 2022-11-28" \
-                              "https://api.github.com/orgs/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions/$VERSION_ID"
+                              "https://api.github.com/users/$GITHUB_USER/packages/container/$IMAGE_NAME/versions/$VERSION_ID"
                           echo "Deleted $IMAGE_NAME:$tag"
                       fi
                   fi
