--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Fetch Image List from GitHub Packages
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPO: "pavanbandaru"
+          GITHUB_REPO: "mishragulshan999"
         run: |
           OUTPUT="["
 
