--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -29,7 +29,7 @@ jobs:
             "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container")
 
           # Debug: Print the raw response to check structure
-          echo "GitHub API Response:"
+          echo "GitHub API Response for Images:"
           echo "$IMAGES" | jq .
 
           # Fetch deployed tags in Kubernetes
@@ -41,13 +41,18 @@ jobs:
           OUTPUT="["
           for row in $(echo "$IMAGES" | jq -c '.[]'); do
               IMAGE_NAME=$(echo "$row" | jq -r '.name')
+
+              # Fetch tags for each image
               GITHUB_TAGS=$(curl -s -L \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
-                | jq -r '.[0].metadata.container.tags[]')
-              
+                | jq -r '.[].metadata.container.tags[]')
+
+              # Debug: Show the tags being fetched
+              echo "Tags for $IMAGE_NAME: $GITHUB_TAGS"
+
               for tag in $GITHUB_TAGS; do
                   if echo "$DEPLOYED_IMAGES" | grep -q "$IMAGE_NAME:$tag"; then
                       STATUS="Deployed"
