--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -56,13 +56,18 @@ jobs:
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
-                "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
-                | jq -r '.[].metadata.container.tags[]?')
+                "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions")
 
-              # Check if tags are available and process each
-              if [[ -z "$GITHUB_TAGS" ]]; then
-                echo "No tags found for image $IMAGE_NAME, skipping..."
-                continue
+              # Debug the structure of the response
+              echo "GitHub API response for $IMAGE_NAME:"
+              echo "$GITHUB_TAGS" | jq .
+
+              # Check if metadata and tags exist in the response
+              if echo "$GITHUB_TAGS" | jq -e 'has("metadata") and .metadata.container.tags' > /dev/null; then
+                  GITHUB_TAGS=$(echo "$GITHUB_TAGS" | jq -r '.metadata.container.tags[]')
+              else
+                  echo "No tags found for image $IMAGE_NAME, skipping..."
+                  continue
               fi
 
               # Process each tag
